--- a/style1.css
+++ b/style1.css
@@ -105,7 +105,7 @@ h2 {
   text-align: center;
   width: 100%;
   height: 5%;
-  background-color: #DD8F38;
+  background-color: #C4ADAE;
   font-size: 2vw;
 }
 
@@ -155,7 +155,7 @@ h2 {
   text-align: center;
   width: 15%;
   height: 85%;
-  background-color: #DD8F38;
+  background-color: #C4ADAE;
   float: right;
   font-size: 40px;
 }
