--- a/style1.css
+++ b/style1.css
@@ -35,9 +35,9 @@ p {
   .opisss1 {
     width: 100%
   }
-
   .main {
     display: block;
+	  background-color: bisque;
   }
 }
 
@@ -62,6 +62,7 @@ h2 {
   height: 1200px;
   margin: auto;
   text-align: center;
+	background-color: bisque;
 }
 
 .h1 {
